--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "leo-reset.css",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "CSS reset with the goal of resetting the default styles set by browsers, but maintaining some and totally beneficial styling standards.",
+    "files": ["./dist"],
     "style": "./dist/leo-reset.css",
     "license": "MIT",
     "keywords": [
